@@ -24,7 +24,11 @@ unity (7.4.0+16.04.20160715-0ubuntu2) UNRELEASED; urgency=medium
     calling them (LP: #1605012)
 
   [ Eleni Maria Stea ]
-  * DecoratedWindow: Added shadows for shaped windows
+  * DecoratedWindow: Added shadows for shaped windows (LP: 1608418)
+
+  [ Marco Trevisan (Treviño) ]
+  * DecoratedWindow: Cleanup shadows for shaped windows, reduce
+    recomputation (LP: #1608418)
 
  -- Andrea Azzarone <azzaronea@gmail.com>  Mon, 01 Aug 2016 10:34:14 +0200
 
